--- a/css/style.css
+++ b/css/style.css
@@ -252,10 +252,10 @@ li {
         font-size: 18px;
         font-weight: bold;
         background-repeat: no-repeat;
-        background-position: calc(100% - 10px) calc(42px - 27px);
+        background-position: calc(100% - 15px) calc(100% - 13px);
         line-height: normal; }
         .calender .ui-datepicker-header .ui-datepicker-title select:first-child {
-          background-position: calc(100% - 17px) calc(42px - 27px); }
+          background-position: calc(100% - 10px) calc(100% - 13px); }
   .calender table {
     width: 100%;
     text-align: center; }
